--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -308,6 +308,8 @@ body::before, body::after {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
+            justify-content: center;
+
             gap: 25px;
 
             font-family: "Libre Bodoni", serif;
@@ -315,14 +317,17 @@ body::before, body::after {
     
             .blog-post {
                 background-color: #F1F8F3;
-                height: 480px;
-                width: 275px;
+                height: auto;
+                
+                width: calc((100% - 50px) / 2);
+                max-width: 275px;
+
                 border-radius: 10px;
                 box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
     
                 img {
                     height: 300px;
-                    width: 275px;
+                    width: 100%;
                     object-fit: cover;
                     border-radius: 10px 10px 0px 0px;
                 }
@@ -332,6 +337,7 @@ body::before, body::after {
                     flex-direction: column;
                     justify-content: space-between;
                     align-items: center;
+
                     height: 180px;
                     margin-left: 5px;
                     margin-right: 5px;
@@ -340,7 +346,7 @@ body::before, body::after {
                         font-weight: bold;
                         font-size: 19px;
                         display: flex;
-                        width: 260px;
+                        width: 99%;
 
                         justify-content: center;
                         align-items: center;
