--- a/CSS/header.css
+++ b/CSS/header.css
@@ -27,6 +27,13 @@ nav {
     font-family: "libre Bodoni", serif;
 
     font-size: 15px;
+
+    .nav-links-top {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
     
     .searchbar-header {
 
@@ -37,8 +44,8 @@ nav {
         align-items: center;
         text-align: left;
         margin-right: 20px;
-
         margin-top: 15px;
+
         width: 345px;
         height: 25px;
         border-radius: 25px;
@@ -132,7 +139,7 @@ nav {
         #searchInput::placeholder {
             padding-left: 5px;
             color: #162D06;
-            font-size: 12px;
+            font-size: 13px;
         }
         
         #searchInput {
@@ -261,60 +268,67 @@ nav {
                 width: 209px;
                 max-height: 500px;
             }
+
+            #searchInput::placeholder {
+                font-size: 10px;
+            }
+
+            i {
+                font-size: 12px;
+            }
     
         }
 
-
-    .nav-links {
-        display: block;
-        position: fixed;
-
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-
-
-        top: 0;
-        margin-top: -10px;
-        padding-top: 100px;
-
-        right: -100%;
-        width: 250px; 
-        height: 100vh;
-        
-        background-color: #d5eac7;
-        background-size: 40%;        
-        box-shadow: 2px 2px 10px 2px rgba(1, 56, 10, 0.485);
-        backdrop-filter: blur(70px);
-
-        transition: right 0.3s ease; 
-        z-index: 999;
-
-        li {
-
+        .nav-links {
+            display: block;
+            position: fixed;
+    
+            flex-direction: column;
             align-items: flex-start;
             justify-content: flex-start;
-            text-align: left;
-
-            font-size: 19px;
     
-            a {
-                width: 250px;
-                padding-left: 0px;
-            }
     
-            .head-link1, .head-link2, .head-link3, .head-link4, .head-link5 {
-                display: block;
-            }
+            top: 0;
+            margin-top: -10px;
+            padding-top: 100px;
     
-            .head-icon1, .head-icon2,.head-icon3,.head-icon4,.head-icon5 {
-                display: none;
+            right: -100%;
+            width: 250px; 
+            height: 100vh;
+            
+            background-color: #d5eac7;
+            background-size: 40%;        
+            box-shadow: 2px 2px 10px 2px rgba(1, 56, 10, 0.485);
+            backdrop-filter: blur(70px);
+    
+            transition: right 0.3s ease; 
+            z-index: 999;
+    
+            li {
+    
+                align-items: flex-start;
+                justify-content: flex-start;
+                text-align: left;
+    
+                font-size: 19px;
+        
+                a {
+                    width: 250px;
+                    padding-left: 0px;
+                }
+        
+                .head-link1, .head-link2, .head-link3, .head-link4, .head-link5 {
+                    display: block;
+                }
+        
+                .head-icon1, .head-icon2,.head-icon3,.head-icon4,.head-icon5 {
+                    display: none;
+                }
             }
         }
-    }
-    .nav-links.active {
-        right: 0; 
-    }
+        .nav-links.active {
+            right: 0; 
+        }
 
     }
 
