--- a/CSS/Admin/admin-login.css
+++ b/CSS/Admin/admin-login.css
@@ -80,6 +80,7 @@ body {
                     display: flex;
                     flex-direction: column;
                     gap: 10px;
+                    width: 300px;
 
                     color: #162D06;
 
