--- a/CSS/index.css
+++ b/CSS/index.css
@@ -296,6 +296,7 @@ body::before, body::after {
 
 .main-content {
 
+    margin-left: -8px;
     z-index: 2;
     margin-top: 100vh;
     box-shadow: 10px 1px 50px 5px rgba(1, 56, 10, 0.396);
@@ -305,7 +306,6 @@ body::before, body::after {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    left: -8px;
 
     position: relative;
 
@@ -322,30 +322,38 @@ body::before, body::after {
         flex-direction: column;
         top: 0;
         right: 0;
+
         width: 300px;
-        margin-right: 0px;
         background-color: #d5eac7;
     
         .right-s-content {
     
+            width: 100%;
             height: 100vh;
             position: sticky;
             display: flex;
             flex-direction: column;
-            top: 0;
     
             .right-s-background {
+
                 background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                 background-size: 40%;
                 padding-bottom: 70px;
-                width: 300px;
+                margin-top: -25px;
+                width: 100%;
                 height: 100%;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
     
                 .right-s-box {
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
+                    width: 100%;
+
                     margin-top: 0px;
     
                     .right-s-text {
@@ -354,8 +362,10 @@ body::before, body::after {
                         display: flex;
                         flex-direction: column;
                         align-items: center;
+                        justify-content: center;
+
                         border-radius: 10px;
-                        width: 250px;
+                        width: 225px;
 
                         font-family: "Libre Bodoni", serif;
                         font-weight: normal;
@@ -398,17 +408,20 @@ body::before, body::after {
     }
 
     .scroll-content {
+        position: relative;
 
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 75%;
-        margin-left: 7%;
-        margin-right: 3.5%;
+        width: 100%;
         margin-bottom: 150px;
 
         .newly-posted-container {
+
+            width: 100%;
+            padding: 0 15px;
+            box-sizing: border-box;
 
             color: #162D06;
             margin-top: 75px;
@@ -427,20 +440,28 @@ body::before, body::after {
             }
 
             .newly-posted-carousel {
-                width: 1200px;
-                overflow-x: scroll;
+
+                width: 100%;
+                position: absolute;
+                display: flex;
+
+                justify-content: center;
+                align-items: center;
+
                 margin-top: -50px;
 
-                font-family: "Libre Bodoni", serif;
-                font-weight: normal;
+                position: relative;
+                overflow: hidden;
+                height: 700px;
 
                 .newly-posted {
 
-                    width: 100%;
                     height: 700px;
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                    justify-content: flex-start;
+
                     gap: 25px;
     
                     .new-post {
@@ -450,7 +471,9 @@ body::before, body::after {
 
                         border-radius: 10px;
                         height: 600px;
-                        width: 335px;
+                        width: calc((100% - 50px) / 3);
+                        max-width: 375px;
+                        min-width: 350px;
 
                         .blog-link {
                             text-decoration: none;
@@ -471,7 +494,7 @@ body::before, body::after {
                         }
         
                         img {
-                            width: 335px;
+                            width: 100%;
                             height: 420px;
                             object-fit: cover;
                             border-radius: 10px 10px 0px 0px;
@@ -511,9 +534,103 @@ body::before, body::after {
                     }
                 }
             }
+
+            .next-left-newly {
+                position: absolute;
+                background-color: white;
+                height: 50px;
+                width: 50px;
+                border-radius: 99px;
+                z-index: 998;
+
+                left: 3%;
+                top: 500px;
+
+    
+                color: #162D06;
+                border: solid #162D06 2px;
+    
+                cursor: pointer;
+                font-size: 17px;
+    
+                &:hover {
+                    font-size: 30px;
+                    transition: 0.25s;
+    
+                    transform: scale(1.1);
+    
+                    background-color: pink;
+                }
+            }
+    
+            .next-right-newly {
+                position: absolute;
+                background-color: white;
+                height: 50px;
+                width: 50px;
+                border-radius: 99px;
+                z-index: 998;
+
+                right: 3%;
+                top: 500px;
+
+    
+                color: #162D06;
+                border: solid #162D06 2px;
+    
+                cursor: pointer;
+                font-size: 17px;
+    
+                &:hover {
+                    font-size: 30px;
+                    transition: 0.25s;
+    
+                    transform: scale(1.1);
+    
+                    background-color: pink;
+                }
+            }
+    
+            .progress-bar-newly {
+                position: absolute;
+                z-index: 99px;
+                width: 225px;
+                background-color: white;
+                box-shadow: 10px 1px 50px 5px rgba(1, 56, 10, 0.246);
+                height: 25px;
+
+                top: 860px;
+                left: 42.5%;
+    
+                border-radius: 99px;
+    
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+            }
+    
+            .dot-newly {
+                display: flex;
+                flex-direction: row;
+    
+                height: 10px;
+                width: 10px;
+                background-color: #162D06;
+                border-radius: 99px;
+                margin: 0 5px;
+                opacity: 0.5;
+                transition: opacity 0.3s ease;
+    
+                cursor: pointer;
+            }
+
         }
 
         .all-posts-container {
+
+            width: 100%;
+            padding-top: 75px;
 
             color: #162D06;
             margin-top: 75px;
@@ -602,6 +719,7 @@ body::before, body::after {
                 flex-direction: row;
                 flex-wrap: wrap;
                 justify-content: center;
+                width: 100%;
     
                 gap: 25px;
     
@@ -614,7 +732,7 @@ body::before, body::after {
                     height: 550px;
                     
                     width: calc((100% - 50px) / 2);
-                    max-width: 350px;
+                    max-width: 285px;
     
                     border-radius: 10px;
                     box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
