--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -18,6 +18,7 @@ body::before, body::after {
 
     border-radius: 0px 99px 10px 0px;
     width: 10px;
+    border: solid #162D06 0.5px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -43,6 +44,8 @@ body::before, body::after {
         position: sticky;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         top: 0;
         right: 0;
 
@@ -56,21 +59,21 @@ body::before, body::after {
             position: sticky;
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
     
             .right-s-background {
 
                 background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
                 background-size: 40%;
                 padding-bottom: 70px;
-                margin-top: -25px;
                 width: 100%;
                 height: 100%;
 
                 display: flex;
-                flex-direction: column;
-
                 justify-content: center;
                 align-items: center;
+                flex-direction: column;
 
                 .gobackbutton {
                     margin-top: 100px;
@@ -121,17 +124,15 @@ body::before, body::after {
                 }
     
                 .right-s-box {
-
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    width: 100%;
+                    width: 225px;
 
                     margin-top: 0px;
     
                     .right-s-text {
-
                         background-color: #F2FFEA;
                         display: flex;
                         flex-direction: column;
